# pseudobatch

./: .buildinfo  .gitignore  Dockerfile  FAQ.html  FAQ.ipynb  LICENSE  MANIFEST.in  Makefile  Quick start.html  Quick start.ipynb  README.md  api.html  build_testing.sh  genindex.html  index.html  install.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py  tox.ini
Tutorials/: 1 - Perform Pseudo batch transformation.html  1 - Perform Pseudo batch transformation.ipynb  10 - Special case evaporation.html  10 - Special case evaporation.ipynb  2 - Estimate overall rates and yields.html  2 - Estimate overall rates and yields.ipynb  3 - Estimate time series parameters.html  3 - Estimate time series parameters.ipynb  4 - Dealing with multiple feeds.html  4 - Dealing with multiple feeds.ipynb  5 - Importing data from Excel template.html  6 - Real data example: Yeast Biolector Fermentation.html  6 - Real data example: Yeast Biolector Fermentation.ipynb  7 - Pseudobatch transformation with uncertainties.html  8 - Special case gaseous species.html  8 - Special case gaseous species.ipynb  9 - Special case non-feed additions.html  9 - Special case non-feed additions.ipynb  index.html
_modules/: index.html
_sources/: Quick start.ipynb.txt  api.rst.txt  index.rst.txt  install.rst.txt
article/: README.md  main.tex  references.bib  requirements.txt  run_all.sh
docs/: requiments-docs.txt  requirements-docs.txt
excel-pseudobatch/: Pseudo_batch_template.xlsx  Pseudo_batch_template_example_1.xlsx  README.md  README.rst  (+1 more)
(+111 files in other folders)
