[metadata]
name = pseudobatch
version = 0.0.1
author=Viktor Hesselberg-Thomsen and Teddy Groves
author_email=vikhes@biosustain.dtu.dk
description=Transform data from fed batch cultures to get equivalent batch culture values
long_description = file: README.md
license=MIT license
url = https://github.com/viktorht/pseudobatch

[options]
packages = find:
include_package_data = True
requires_python = >=3.7
install_requires =
    arviz
    cmdstanpy>=1.0.7
    numpy
    pandas
    pydantic

[options.package_data]
* =
    *.stan
pseudobatch.datasets.data = *.csv

[options.extras_require]
development =
    flake8
    pytest
    mypy
    isort
    black
    patsy
    statsmodels
documentation =
    sphinx
    nbsphinx
    pydata-sphinx-theme
